--- a/DnsTube2/Main2.xaml
+++ b/DnsTube2/Main2.xaml
@@ -51,9 +51,9 @@
 
 			<DataGrid Name="dgDnsRecords" Grid.Row="1" AutoGenerateColumns="False">
 				<DataGrid.Columns>
-					<DataGridCheckBoxColumn Header="Update" IsReadOnly="False" Binding="{Binding Path=Update, UpdateSourceTrigger=PropertyChanged}"></DataGridCheckBoxColumn>
+					<DataGridCheckBoxColumn Header="Update" IsReadOnly="False" Binding="{Binding Path=UpdateCloudflare, UpdateSourceTrigger=PropertyChanged}"></DataGridCheckBoxColumn>
 					<DataGridTextColumn Header="Type" Binding="{Binding Path=Type}" IsReadOnly="True"></DataGridTextColumn>
-					<DataGridTextColumn Header="Name" Binding="{Binding Path=Name}" IsReadOnly="True"></DataGridTextColumn>
+					<DataGridTextColumn Header="Name" Binding="{Binding Path=DnsName}" IsReadOnly="True"></DataGridTextColumn>
 					<DataGridTextColumn Header="Address" Binding="{Binding Path=Address}" IsReadOnly="True"></DataGridTextColumn>
 					<DataGridTextColumn Header="Proxied" Binding="{Binding Path=Proxied}" IsReadOnly="True"></DataGridTextColumn>
 				</DataGrid.Columns>
