--- a/DnsTube2/App.xaml
+++ b/DnsTube2/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:DnsTube2"
-             StartupUri="Main2.xaml">
+             StartupUri="frmMain.xaml">
     <Application.Resources>
          
     </Application.Resources>
