--- a/DnsTube/App.xaml
+++ b/DnsTube/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="DnsTube2.App"
+﻿<Application x:Class="DnsTube.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:DnsTube2"
+             xmlns:local="clr-namespace:DnsTube"
              StartupUri="frmMain.xaml">
     <Application.Resources>
          
