--- a/DnsTube/frmSettings.xaml
+++ b/DnsTube/frmSettings.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="DnsTube2.frmSettings"
+﻿<Window x:Class="DnsTube.frmSettings"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:DnsTube2"
+        xmlns:local="clr-namespace:DnsTube"
         mc:Ignorable="d"
         Title="Settings" Height="360" Width="510" WindowStartupLocation="CenterScreen" Loaded="Window_Loaded" Icon="/icon-48.ico">
     <Grid>
