Add icon to title bar

--- a/DnsTube/frmMain.xaml
+++ b/DnsTube/frmMain.xaml
@@ -4,7 +4,7 @@
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		mc:Ignorable="d"
-    Title="DnsTube" Height="450" Width="800" MinHeight="340" MinWidth="500" Loaded="frmMain_Loaded" StateChanged="frmMain_StateChanged" Icon="/icon-48.ico">
+    Title="DnsTube" Height="450" Width="800" MinHeight="340" MinWidth="500" Loaded="frmMain_Loaded" StateChanged="frmMain_StateChanged" Icon="icon-48.ico">
     <Grid>
         <Rectangle Fill="#f0f0f0" />
         <Grid Margin="12">
