--- a/DnsTube/frmMain.xaml
+++ b/DnsTube/frmMain.xaml
@@ -35,6 +35,7 @@
                     <DataGridTextColumn Header="Type" Binding="{Binding Path=Type}" IsReadOnly="True"></DataGridTextColumn>
                     <DataGridTextColumn Header="Name" Binding="{Binding Path=DnsName}" IsReadOnly="True"></DataGridTextColumn>
                     <DataGridTextColumn Header="Address" Binding="{Binding Path=Address}" IsReadOnly="True"></DataGridTextColumn>
+                    <DataGridTextColumn Header="TTL" Binding="{Binding Path=TTL}" IsReadOnly="True"></DataGridTextColumn>
                     <DataGridTextColumn Header="Proxied" Binding="{Binding Path=Proxied}" IsReadOnly="True"></DataGridTextColumn>
                 </DataGrid.Columns>
             </DataGrid>
