--- a/DnsTube/frmMain.xaml
+++ b/DnsTube/frmMain.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="DnsTube.frmMain"
+﻿<Window x:Class="DnsTube.Gui.frmMain"
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
