--- a/DnsTube/frmSettings.xaml
+++ b/DnsTube/frmSettings.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="DnsTube.frmSettings"
+﻿<Window x:Class="DnsTube.Gui.frmSettings"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
