--- a/DnsTube.Service/ClientApp/src/style.css
+++ b/DnsTube.Service/ClientApp/src/style.css
@@ -1,10 +1,23 @@
 ﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+	padding-top: 50px;
+	padding-bottom: 20px;
 }
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+	padding-left: 15px;
+	padding-right: 15px;
+}
+
+a {
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: underline;
+}
+
+h4 {
+	font-size: 18px;
+	margin-top: 24px;
 }
